<resources xmlns:ns1="urn:oasis:name:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">
    <string name="test">测试</string>
    <string name="image">图片或按钮</string>
    <string name="app_name">无忧停车</string>
    <string name="qu_kai_qi">去开启</string>
    <string name="zi_dong_zi_fu_dou_hao">自动支付，支付更快捷 </string>
    <string name="ge_ren_zi_liao">个人资料</string>
    <string name="zan_wu_shou_fei_xin_xi">暂无收费信息</string>
    <string name="she_zhi">设置</string>
    <string name="xia_zai">下载</string>
    <string name="wei_xia_zai">未下载</string>
    <string name="dui_huan">兑换</string>
    <string name="dui_huan_ma">兑换码</string>
    <string name="qing_shu_ru_dui_huan_ma">请输入兑换码</string>
    <string name="wu_ding_dan">无订单</string>
    <string name="ting_che_zhong">停车中</string>
    <string name="dai_zhi_fu">待支付</string>
    <string name="dai_chu_chang">待出场</string>
    <string name="yu_e_ming_xi">余额明细</string>
    <string name="zhao_shang_yin_hang">帐单信息</string>
    <string name="shou_qing">售罄</string>
    <string name="hui_yuan_wei_bang_ka">请点击“绑定停车卡”，扫描卡上二维码进行绑定。</string>
    <string name="hui_yuan_yi_bang_ka">会员卡用户,可以在出场交停车费的时候，用会员卡进行扫卡。</string>
    <string name="xing_ming">姓名</string>
    <string name="xing_bie">性别</string>
    <string name="shou_ji_hao">手机号</string>
    <string name="qing_shu_ru_xing_ming">请输入姓名</string>
    <string name="xian_sheng">先生</string>
    <string name="nv_shi">女士</string>
    <string name="bao_cun">保存</string>
    <string name="zuo_jia_pai_hao">座驾牌号</string>
    <string name="tian_jia_che_pai">添加车牌</string>
    <string name="zu_qi">租期</string>
    <string name="yi_wu_ba_xing">158****3131</string>
    <string name="wen_xin_ti_shi_chong_zhi">温馨提示：充值后不予退款</string>
    <string name="fu_wu_xu_zhi">服务须知</string>
    <string name="lian_xi_ke_fu">联系客服</string>
    <string name="si_ling_ling">400&#8211;709&#8211;5151</string>
    <string name="li_ji_gou_mai">立即购买</string>
    <string name="tui_jian_gei_xiao_huo_ban">推荐给小伙伴</string>
    <string name="gou_mai_xu_zhi">购买须知</string>
    <string name="gui_ze_ti_xing">规则提醒：包月与计次服务不能同享。</string>
    <string name="cha_kan_guo_qi_lie_biao">查看过期列表>></string>
    <string name="xu_fei">续费</string>
    <string name="kai_shi_dao_hang">开始导航</string>
    <string name="kong_yu_che_wei_jin_gong_can_kao">(空余车位仅供参考)</string>
    <string name="jin_gong_can_kao">(仅供参考)</string>
    <string name="ling">0</string>
    <string name="ling_ling">00</string>
    <string name="ling_ling_ling">000</string>
    <string name="ling_dian_ling_ling">0.00</string>
    <string name="ling_mi">0米</string>
    <string name="ling_zhao">0M</string>
    <string name="jian_cha_geng_xin">检查更新</string>
    <string name="ling_yuan">0元</string>
    <string name="ling_shi_ling_fen">0小时0分</string>
    <string name="yi_jin_chang">已进场</string>
    <string name="yu_fu_fei">预付费</string>
    <string name="wei_zhi_fu">未支付</string>
    <string name="wei_chu_chang">未出场</string>
    <string name="qing_shu_ru_chan_ping_yi_jian">请输入产品意见，我们将不断优化体验</string>
    <string name="qing_shu_ru_nin_de_shou_ji_hao">请输入您的手机号/邮箱等(选填)</string>
    <string name="qing_kong_quan_bu_li_shi_ji_lu">清空全部历史记录</string>
    <string name="shou_fei_xiang_qing">收费详情</string>
    <string name="ri_jian_shi_jian_duan">日间(7：00 &#8211; 21：00)</string>
    <string name="ye_jian_shi_jian_duan">夜间(21：00 &#8211; 7：00)</string>
    <string name="shou_shi_wu_fen_zhong">首15分钟内</string>
    <string name="shi_wu_dao_san_shi">15 &#8211; 30分钟</string>
    <string name="yi_xiao_shi_yi_nei">1小时以内</string>
    <string name="chao_guo_yi_xiao_shi">超过一小时</string>
    <string name="da_kai">打开</string>
    <string name="guan_bi">关闭</string>
    <string name="dui_zhun_er_wei_ma">对准二维码到框内即可扫描</string>
    <string name="shou_ye">首页</string>
    <string name="bai_bao_xiang">服务</string>
    <string name="wo_de">我的</string>
    <string name="sao_yi_sao">扫一扫</string>
    <string name="wo_de_er_wei_ma">我的二维码</string>
    <string name="zhao_che_wei">找车位</string>
    <string name="ji_lu_che_wei">缴车费</string>
    <string name="zuo_jia_wei_zhi">座驾位置</string>
    <string name="fu_jin_you_ting_che_chang">附近有0个停车场</string>
    <string name="bai_hui_yi_bo_ting_che">百会易泊测试停车场</string>
    <string name="sou_suo">搜索</string>
    <string name="sou_suo_di_dian">搜索地点</string>
    <string name="jing_b_yi_er_san_si_wu">京B12345</string>
    <string name="jia_ge_mao_hao">价格：</string>
    <string name="mao_hao">:</string>
    <string name="yuan">元</string>
    <string name="ti_shi_qing_nin_zai">提示：请您在</string>
    <string name="shi_shi_wu_fen_qian">10时15分前</string>
    <string name="ti_shi_li_chang">离场,超时需补交停车费。</string>
    <string name="dang_qian_mei_you_ding_dan">当前没有订单哦</string>
    <string name="zhi_fu_cheng_gong">支付成功</string>
    <string name="jia_zai_zhong">加载中</string>
    <string name="dang_qian_wei_zhi">当前位置：海淀区学院路艺海大厦</string>
    <string name="yi_hai_da_sha_xue_yuan_lu">学院路7号艺海大厦</string>
    <string name="zong_mao_hao">总：</string>
    <string name="kong_mao_hao">空：</string>
    <string name="zong_che_wei_mao_hao">总车位：</string>
    <string name="kong_che_wei_mao_hao">空车位：</string>
    <string name="lu_xian">路线</string>
    <string name="xiang_qing">详情</string>
    <string name="dao_zhe_qu">到这去</string>
    <string name="bai_tian_mao_hao">白天：</string>
    <string name="er_bai_wu_shi_yuan_time" tools:ignore="TypographyDashes">1.25元/15分钟(07:00-21:00)</string>
    <string name="ye_wan_mao_hao">夜晚：</string>
    <string name="nin_zai_ben_chang_gou_mai">您在本场购买的租赁服务将于2015年10月25日到期</string>
    <string name="che_wei_qing_kuang_yu_ce">车位情况预测</string>
    <string name="li_ji_chong_zhi">立即充值</string>
    <string name="chong_zhi">充值</string>
    <string name="chong_zhi_ji_lu">充值记录</string>
    <string name="chong_zu">充足</string>
    <string name="jiao_shao">较少</string>
    <string name="jin_que">紧缺</string>
    <string name="qu_zhe_er">去这儿</string>
    <string name="wan_cheng_zhao_che">完成找车</string>
    <string name="qing_chu_tu_pian">（清除图片）</string>
    <string name="ting_che_jiao_fei_zhi_fu_cheng_gong">停车缴费支付成功</string>
    <string name="gan_xie_nin_de_zhi_chi">感谢您的支持，欢迎下次光临</string>
    <string name="cha_kan_ding_dan_xin_xi">查看订单信息</string>
    <string name="wan_cheng">完成</string>
    <string name="wan_cheng_bang_ding">完成绑定</string>
    <string name="che_pai_hao">车牌号</string>
    <string name="che_pai_hao_mao_hao">车牌号：</string>
    <string name="ting_che_chang_mao_hao">停车场：</string>
    <string name="ting_che_chang">停车场</string>
    <string name="parkname">停车场</string>
    <string name="ting_che_fei_yong">停车费用</string>
    <string name="ben_di_you_hui">优惠金额</string>
    <string name="yu_e_xiao_fei">余额消费</string>
    <string name="yu_e_zhi_fu">余额支付</string>
    <string name="ling_yuan_zhi_fu">零元支付</string>
    <string name="ting_che_shi_jian">停车时间</string>
    <string name="ti_xing_jie_zhang_shi">提醒：结账时向收费员提供无忧停车卡或让收费员扫描我的二维码</string>
    <string name="zhang_dan_xin_xi">帐单信息</string>
    <string name="zhang_hu_yu_e">账户余额</string>
    <string name="qing_hua_ting_che_chang">清华科技园地下停车场</string>
    <string name="dong_cheng_qu_wang_fu_jin">东城区王府井大街99号</string>
    <string name="hui_yuan_ka_hao">会员卡号</string>
    <string name="yong_hu_ming_cheng">用户名称</string>
    <string name="che_pai_hao_ma">车牌号码</string>
    <string name="ting_che_shi_chang">停车时长</string>
    <string name="park_long_colon">停车时长：</string>
    <string name="yi_yong_you_hui_quan">已用优惠券</string>
    <string name="yi_yu_fu_jin_e">已预付金额</string>
    <string name="xu_bu_jiao_jin_e">需补交金额</string>
    <string name="sheng_yu_ying_fu">剩余应付</string>
    <string name="que_ding_zhi_fu">确定支付</string>
    <string name="shi_jiao_jin_e">实付金额</string>
    <string name="ying_jiao_jin_e">停车费用</string>
    <string name="ying_fu_jin_e_mao_hao">应付金额：</string>
    <string name="er_shi_er_yuan">￥22</string>
    <string name="wei_bang_ding">未绑定</string>
    <string name="wei_bang_ding_hui_yuan_ka">未绑定会员卡</string>
    <string name="wei_bang_ding_che_pai_hao">未绑定车牌号</string>
    <string name="wei_xuan_ze_you_hui_quan">未选择优惠券</string>
    <string name="si_xiao_shi_shi_fen_zhong">4小时10分</string>
    <string name="ding_dan_bian_hao">订单编号</string>
    <string name="zhi_fu_shi_jian">支付时间</string>
    <string name="zhi_fu_fang_shi">支付方式</string>
    <string name="jiao_yi_zhuang_tai">交易状态</string>
    <string name="jiao_yi_cheng_gong">交易成功</string>
    <string name="xian_jin">现金</string>
    <string name="you_hui_quan">优惠券</string>
    <string name="you_hui">优惠</string>
    <string name="bu_xuan_ze_you_hui_quan">不选择优惠券</string>
    <string name="dai_jin_quan">(代金券)</string>
    <string name="xuan_ze_zhi_fu_fang_shi">请选择支付方式</string>
    <string name="xin_yong_ka">信用卡</string>
    <string name="zhi_fu_bao">支付宝</string>
    <string name="wei_xin">微信</string>
    <string name="you_bei_xian_fu">有贝先付</string>
    <string name="da_bai_tiao">打白条</string>
    <string name="fan_hui">返  回</string>
    <string name="bei_zhu">备  注</string>
    <string name="che_wei_zu_lin">长租车位</string>
    <string name="geng_pian_yi_geng_you_hui">更便宜 更优惠</string>
    <string name="qi_che_zhuan_jia">汽车专家</string>
    <string name="qi_che_wen_da">汽车问答</string>
    <string name="huo_dong_zhong_xin">活动中心</string>
    <string name="huo_dong_bu_ting">车停活动不停止，还等什么</string>
    <string name="yao_yi_yao">摇一摇</string>
    <string name="yao_chu_geng_duo_fu_li">要出更多福利，敬请期待</string>
    <string name="che_xing_yi">违章查询</string>
    <string name="qing_song_cha_wei_zhang">轻松查违章</string>
    <string name="bao_zu">包租</string>
    <string name="cheng_qu_xuan_ze">城区选择</string>
    <string name="lei_xing">类   型</string>
    <string name="mian_fei">免费</string>
    <string name="quan_bu">全部</string>
    <string name="bao_yue">包月</string>
    <string name="wu_you">无忧</string>
    <string name="ji_ci">计次</string>
    <string name="current_order">当前订单</string>
    <string name="history_order">历史订单</string>
    <string name="zi_dong_zhi_fu">自动支付</string>
    <string name="da_kai_hou_zi_dong">打开后将自动使用余额、信用卡支付停车费；</string>
    <string name="li_xian_di_tu">离线地图</string>
    <string name="cheng_shi_qie_huan">城市切换</string>
    <string name="bei_jing_shi">北京市 </string>
    <string name="qing_chu_huan_cun">清除缓存</string>
    <string name="qing_xuan_ze_chong_zhi">请选择充值金额</string>
    <string name="qing_deng_lu">请登录</string>
    <string name="guan_yu_wo_men">关于我们</string>
    <string name="tui_chu_deng_lu">退出登录</string>
    <string name="free_regist">新用户注册，免费送</string>
    <string name="voucher_20">20元优惠券</string>
    <string name="please_input_imagecode">请输入右边的图形码</string>
    <string name="please_input_message">请输入验证码</string>
    <string name="please_input_phone">请输入11位手机号码</string>
    <string name="please_input_username">请输入帐号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_carcode">请添加车牌号</string>
    <string name="next">下一步</string>
    <string name="finish_regist">完成注册</string>
    <string name="login">登  录</string>
    <string name="auto_login">自动登录</string>
    <string name="find_password">忘记密码？</string>
    <string name="get_vertify_code">获取验证码</string>
    <string name="regist_new_user">注册新用户点这里 ></string>
    <string name="read_agreenment">点击登录，即表示您已同意</string>
    <string name="park_server_ment">《无忧停车服务协议》</string>
    <string name="baihui_version">版权所有@2014 北京百会易泊科技有限公司</string>
    <string name="time">2015&#8211;03&#8211;14 16:37</string>
    <string name="order_num">2015080514555858980</string>
    <string name="search">搜索</string>
    <string name="near">周边</string>
    <string name="payfor">缴停车费</string>
    <string name="mine">我的</string>
    <string name="experience">立即体验</string>
    <string name="no_pay">未支付</string>
    <string name="jine">金额：</string>
    <string name="order">订单号：</string>
    <string name="accountbalance">账户余额</string>
    <string name="parkingcard">停车卡</string>
    <string name="credit">信用卡</string>
    <string name="ting_che_quan">停车券</string>
</resources>