<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Layout_Match_Vertical_Style" >

    <!-- 【关于我们】界面 -->

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        layout="@layout/common_title" />

    <View style="@style/View_W_Black_Style" />

    <!-- 无忧停车图标 -->

    <ImageView
        android:id="@+id/app_image_iv"
        android:layout_width="@dimen/width_image"
        android:layout_height="@dimen/width_image"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image"
        android:src="@drawable/icon_login_51park" />

    <!-- 无忧停车版本号 -->

    <TextView
        android:id="@+id/vesion_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/gray_font"
        android:textSize="@dimen/font_comm" />

    <!-- 服务须知 -->

    <View style="@style/View_W_Top_Style" />

    <TextView
        android:id="@+id/server_tv"
        style="@style/Common_Item_Text_Style"
        android:text="@string/fu_wu_xu_zhi" />

    <View style="@style/View_W_Style" />

    <!-- 联系客服 -->

    <RelativeLayout
        android:id="@id/contact_rl"
        style="@style/Common_Item_Layout_Style" >

        <TextView
            style="@style/Common_Item_Left_Style"
            android:text="@string/lian_xi_ke_fu"
            android:textColor="@color/black_font" />

        <TextView
            style="@style/Common_Item_Right_Style"
            android:drawablePadding="1dp"
            android:drawableRight="@drawable/btn_more"
            android:text="@string/si_ling_ling"
            android:textColor="@color/black_font"
            android:textSize="@dimen/font_comm" />
    </RelativeLayout>

    <View style="@style/View_W_Style" />

    <!-- 推荐给小伙伴 -->

    <TextView
        android:id="@+id/tuijian_tv"
        style="@style/Common_Item_Text_Style"
        android:text="@string/tui_jian_gei_xiao_huo_ban" />

    <View style="@style/View_W_Style" />

</LinearLayout>