<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Layout_Match_Vertical_Style" >

    <!-- 【我的钱包】界面 -->

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        layout="@layout/common_title" />

    <View style="@style/View_W_Black_Style" />

    <View style="@style/View_W_Top_Style" />

    <!-- 【账户余额】 -->

    <RelativeLayout
        android:id="@id/remain_rl"
        style="@style/Common_Item_Layout_Style" >

        <TextView
            style="@style/Common_Item_Left_Style"
            android:drawableLeft="@drawable/icon_wallet_remain"
            android:text="@string/accountbalance" />

        <TextView
            android:id="@id/remain_tv"
            style="@style/Common_Item_Right_Style"
            android:drawableRight="@drawable/btn_more"
            android:text="@string/ling_dian_ling_ling" />
    </RelativeLayout>

    <View style="@style/View_W_Left_Style" />

    <!-- 【停车券】 -->

    <RelativeLayout
        android:id="@id/coupons_rl"
        style="@style/Common_Item_Layout_Style" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ll"
                style="@style/Common_Item_Left_Style"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/icon_wallet_coupons"
                android:text="@string/ting_che_quan" />

            <ImageView
                android:id="@+id/iv_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ll"
                android:layout_marginLeft="-10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_red_point"
                android:visibility="visible" />
        </RelativeLayout>

        <TextView
            android:id="@id/coupons_tv"
            style="@style/Common_Item_Right_Style"
            android:drawableRight="@drawable/btn_more"
            android:text="@string/ling" />
    </RelativeLayout>

    <View style="@style/View_W_Bottom_Style" />

    <View style="@style/View_W_Style" />

    <!-- 【停车卡】 -->

    <RelativeLayout
        android:id="@id/vipcard_rl"
        style="@style/Common_Item_Layout_Style" >

        <TextView
            style="@style/Common_Item_Left_Style"
            android:drawableLeft="@drawable/icon_wallet_vipcard"
            android:text="@string/parkingcard" />

        <TextView
            android:id="@id/vipcard_tv"
            style="@style/Common_Item_Right_Style"
            android:drawableRight="@drawable/btn_more"
            android:text="@string/wei_bang_ding" />
    </RelativeLayout>

    <View style="@style/View_W_Left_Style" />

    <!-- 【信用卡】 -->

    <RelativeLayout
        android:id="@id/credit_rl"
        style="@style/Common_Item_Layout_Style" >

        <TextView
            style="@style/Common_Item_Left_Style"
            android:drawableLeft="@drawable/icon_wallet_credit"
            android:text="@string/credit" />

        <TextView
            android:id="@id/credit_tv"
            style="@style/Common_Item_Right_Style"
            android:drawableRight="@drawable/btn_more"
            android:text="@string/wei_bang_ding" />
    </RelativeLayout>

    <View style="@style/View_W_Style" />

</LinearLayout>